--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,12 @@
-<h1 class="center">Liste de Pokemon</h1>
-<div class="container">
-    <div class="row">
-        <div *ngFor="let pokemon of pokemonsList" class="col m4 s6">
-            <div class="card horizontal" pkmnBorderCard>
-                <div class="card-image">
-                    <img [src]="pokemon.picture"/>
-                </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <p>{{ pokemon.name }}</p>
-                        <p><small>{{ pokemon.created }}</small></p>
-                    </div>
-                </div>            
-            </div>
-        </div>
-    </div> 
-</div>
+<nav>
+    <div class="nav-wrapper teal">
+        <a href="#" class="brand-logo center">
+            Pokédex
+        </a>
+    </div>
+</nav>
+
+<router-outlet></router-outlet>
+
 
 
